--- a/02 Predict.ipynb
+++ b/02 Predict.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +174,61 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>12. Mar</td>\n",
+       "      <td>2,078</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2020-03-12</td>\n",
+       "      <td>2,888</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>13. Mar</td>\n",
+       "      <td>3,675</td>\n",
+       "      <td>7</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2020-03-13</td>\n",
+       "      <td>3,631</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>14. Mar</td>\n",
+       "      <td>4,585</td>\n",
+       "      <td>9</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2020-03-14</td>\n",
+       "      <td>4,558</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>15. Mar</td>\n",
+       "      <td>5,795</td>\n",
+       "      <td>11</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2020-03-15</td>\n",
+       "      <td>5,716</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>16. Mar</td>\n",
+       "      <td>7,272</td>\n",
+       "      <td>17</td>\n",
+       "      <td>67</td>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>7,163</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>55</th>\n",
        "      <td>Germany</td>\n",
@@ -290,6 +345,11 @@
       ],
       "text/plain": [
        "    country date_string  confirmed  deaths  recovered       date  predict  \\\n",
+       "50  Germany     12. Mar      2,078       3         25 2020-03-12    2,888   \n",
+       "51  Germany     13. Mar      3,675       7         46 2020-03-13    3,631   \n",
+       "52  Germany     14. Mar      4,585       9         46 2020-03-14    4,558   \n",
+       "53  Germany     15. Mar      5,795      11         46 2020-03-15    5,716   \n",
+       "54  Germany     16. Mar      7,272      17         67 2020-03-16    7,163   \n",
        "55  Germany     17. Mar      9,257      24         67 2020-03-17    8,969   \n",
        "56      NaN     18. Mar        nan     nan        nan 2020-03-18   11,226   \n",
        "57      NaN     19. Mar        nan     nan        nan 2020-03-19   14,043   \n",
@@ -302,6 +362,11 @@
        "64      NaN     26. Mar        nan     nan        nan 2020-03-26   66,904   \n",
        "\n",
        "    predict_deaths  \n",
+       "50              23  \n",
+       "51              29  \n",
+       "52              36  \n",
+       "53              46  \n",
+       "54              57  \n",
        "55              72  \n",
        "56              90  \n",
        "57             112  \n",
@@ -314,13 +379,13 @@
        "64             535  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "germany.iloc[-len_predictions:]"
+    "germany.iloc[-len_predictions-5:]"
    ]
   }
  ],
