--- a/01 load.ipynb
+++ b/01 load.ipynb
@@ -12,32 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# John Hopkins Source\n",
-    "# source = 'COVID-19/csse_covid_19_data/csse_covid_19_time_series/'\n",
-    "# files = {\n",
-    "#     'confirmed': 'time_series_19-covid-Confirmed.csv',\n",
-    "#     'deaths': 'time_series_19-covid-Deaths.csv',\n",
-    "#     'recovered': 'time_series_19-covid-Recovered.csv'\n",
-    "# }"
+    "# git submodule update COVID-19/\n",
+    "source = 'COVID-19/csse_covid_19_data/csse_covid_19_time_series/'\n",
+    "files = {\n",
+    "    'confirmed': 'time_series_19-covid-Confirmed.csv',\n",
+    "    'deaths': 'time_series_19-covid-Deaths.csv',\n",
+    "    'recovered': 'time_series_19-covid-Recovered.csv'\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://data.humdata.org/dataset/novel-coronavirus-2019-ncov-cases\n",
-    "source = 'data/'\n",
-    "files = {\n",
-    "    'confirmed': 'time_series_2019-ncov-Confirmed.csv',\n",
-    "    'deaths': 'time_series_2019-ncov-Deaths.csv',\n",
-    "    'recovered': 'time_series_2019-ncov-Recovered.csv'\n",
-    "}"
+    "# source = 'data/'\n",
+    "# files = {\n",
+    "#     'confirmed': 'time_series_2019-ncov-Confirmed.csv',\n",
+    "#     'deaths': 'time_series_2019-ncov-Deaths.csv',\n",
+    "#     'recovered': 'time_series_2019-ncov-Recovered.csv'\n",
+    "# }"
    ]
   },
   {
