--- a/01 load.ipynb
+++ b/01 load.ipynb
@@ -2,22 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "pd.options.display.float_format = '{0:,.0f}'.format"
+    "pd.options.display.float_format = '{0:,.0f}'.format\n",
+    "pd.options.display.max_rows = 20\n",
+    "pd.options.display.max_rows = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# John Hopkins Source\n",
-    "# git submodule update COVID-19/\n",
+    "# https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series\n",
+    "# git submodule foreach git pull origin master\n",
     "source = 'COVID-19/csse_covid_19_data/csse_covid_19_time_series/'\n",
     "files = {\n",
     "    'confirmed': 'time_series_19-covid-Confirmed.csv',\n",
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +96,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sort by date\n",
     "df = df.sort_values(by=['date', 'country'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add date string\n",
+    "df['date_string'] = df['date'].dt.strftime('%d. %b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last data for germany: 2020-03-20 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Last data for germany:', df[df['country'] == 'Germany']['date'].max())"
    ]
   }
  ],
