--- a/02 Germany Italy.ipynb
+++ b/02 Germany Italy.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./'01 load.ipynb'\n",
-    "pd.options.display.float_format = '{0:,.0f}'.format\n",
-    "pd.options.display.max_rows = 20\n",
-    "pd.options.display.max_rows = 100"
+    "%run ./'01 load.ipynb'"
    ]
   },
   {
