--- a/02 Predict.ipynb
+++ b/02 Predict.ipynb
@@ -35,8 +35,7 @@
     "# germany = df.groupby('date').sum().reset_index() # world\n",
     "dates_new = pd.date_range(germany['date'].iloc[-1], periods=len_predictions)\n",
     "df_new = pd.DataFrame(dates_new[1:], columns=['date'])\n",
-    "germany = germany.append(df_new, ignore_index=True)\n",
-    "germany['date_string'] = germany['date'].dt.strftime('%d. %b')"
+    "germany = germany.append(df_new, ignore_index=True)"
    ]
   },
   {
