--- a/01 load.ipynb
+++ b/01 load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,99 +14,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# John Hopkins Source\n",
-    "# https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series\n",
-    "# git submodule foreach git pull origin master\n",
-    "source = 'COVID-19/csse_covid_19_data/csse_covid_19_time_series/'\n",
-    "files = {\n",
-    "    'confirmed': 'time_series_19-covid-Confirmed.csv',\n",
-    "    'deaths': 'time_series_19-covid-Deaths.csv',\n",
-    "    'recovered': 'time_series_19-covid-Recovered.csv'\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://data.humdata.org/dataset/novel-coronavirus-2019-ncov-cases\n",
-    "# source = 'data/'\n",
-    "# files = {\n",
-    "#     'confirmed': 'time_series_2019-ncov-Confirmed.csv',\n",
-    "#     'deaths': 'time_series_2019-ncov-Deaths.csv',\n",
-    "#     'recovered': 'time_series_2019-ncov-Recovered.csv'\n",
-    "# }"
+    "# John Hopkins Source\n",
+    "# https://github.com/CSSEGISandData/COVID-19/tree/web-data/data/\n",
+    "# git submodule foreach git pull origin master\n",
+    "# git submodule update --init --recursive COVID-19/\n",
+    "source = 'COVID-19/data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load all three dataframes\n",
-    "source_df = {}\n",
-    "for key, file in files.items():\n",
-    "    source_df[key] = pd.read_csv(source+file) \\\n",
-    "        .drop(['Lat', 'Long', 'Province/State'], axis=1) \\\n",
-    "        .melt(id_vars=['Country/Region']) \\\n",
-    "        .groupby(['Country/Region', 'variable']).sum() \\\n",
-    "        .reset_index() \\\n",
-    "        .set_index(['Country/Region', 'variable'])"
+    "df_curr = pd.read_csv(source + 'cases_country.csv')\n",
+    "df_time = pd.read_csv(source + 'cases_time.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# join datasets\n",
-    "df = source_df['confirmed']. \\\n",
-    "    join(source_df['deaths'], rsuffix='_deaths'). \\\n",
-    "    join(source_df['recovered'], rsuffix='_recovered'). \\\n",
-    "    reset_index()"
+    "df_curr = df_curr.drop(['Lat', 'Long_'], axis=1)\n",
+    "df_time = df_time.drop(['Delta_Confirmed', 'Delta_Recovered'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set column names\n",
-    "df.columns = ['country', 'date_string', 'confirmed', 'deaths', 'recovered']"
+    "df_time['Last_Update'] = df_time['Last_Update'] + ' 23:59:59'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parse date\n",
-    "df['date'] = pd.to_datetime(df['date_string'])"
+    "df = pd.concat([df_curr, df_time])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sort by date\n",
-    "df = df.sort_values(by=['date', 'country'])"
+    "df['date'] = pd.to_datetime(df['Last_Update'])\n",
+    "df = df.drop(['Last_Update'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = ['country', 'confirmed', 'deaths', 'recovered', 'active', 'date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values(['country', 'date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last data for germany: 2020-03-20 00:00:00\n"
+      "Last data for germany: 2020-03-24 14:57:20\n"
      ]
     }
    ],
