added country and fixed bug

--- a/01 load.ipynb
+++ b/01 load.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# John Hopkins Source\n",
     "# https://github.com/CSSEGISandData/COVID-19/tree/web-data/data/\n",
-    "# cd COVID-19/ && git pull origin web-data\n",
+    "# after clone: git submodule init COVID-19/ && git submodule update --recursive COVID-19/\n",
     "source = 'COVID-19/data/'"
    ]
   },
