--- a/02 Country.ipynb
+++ b/02 Country.ipynb
@@ -83,6 +83,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>3964</th>\n",
+       "      <td>3902</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>19848</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-03-20 23:59:59</td>\n",
+       "      <td>20. Mar</td>\n",
+       "      <td>4,528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3965</th>\n",
+       "      <td>3903</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>22213</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-03-21 23:59:59</td>\n",
+       "      <td>21. Mar</td>\n",
+       "      <td>2,365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3966</th>\n",
+       "      <td>3904</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>24873</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-03-22 23:59:59</td>\n",
+       "      <td>22. Mar</td>\n",
+       "      <td>2,660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3967</th>\n",
+       "      <td>3905</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>29056</td>\n",
+       "      <td>123</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-03-23 23:59:59</td>\n",
+       "      <td>23. Mar</td>\n",
+       "      <td>4,183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3968</th>\n",
        "      <td>7</td>\n",
        "      <td>Germany</td>\n",
@@ -100,9 +148,17 @@
       ],
       "text/plain": [
        "      index  country  confirmed  deaths  recovered  active  \\\n",
+       "3964   3902  Germany      19848      67          0       0   \n",
+       "3965   3903  Germany      22213      84          0       0   \n",
+       "3966   3904  Germany      24873      94          0       0   \n",
+       "3967   3905  Germany      29056     123          0       0   \n",
        "3968      7  Germany      31991     149        749  31,093   \n",
        "\n",
        "                    date date_string  growth  \n",
+       "3964 2020-03-20 23:59:59     20. Mar   4,528  \n",
+       "3965 2020-03-21 23:59:59     21. Mar   2,365  \n",
+       "3966 2020-03-22 23:59:59     22. Mar   2,660  \n",
+       "3967 2020-03-23 23:59:59     23. Mar   4,183  \n",
        "3968 2020-03-24 17:10:22     24. Mar   2,935  "
       ]
      },
@@ -113,7 +169,7 @@
    ],
    "source": [
     "# Newest Data\n",
-    "df.tail(1)"
+    "df.tail(5)"
    ]
   },
   {
