--- a/01 load.ipynb
+++ b/01 load.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from pandas.api.types import is_numeric_dtype\n",
     "pd.options.display.float_format = '{0:,.0f}'.format\n",
     "pd.options.display.max_rows = 20\n",
     "pd.options.display.max_rows = 100"
@@ -101,6 +102,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert all numeric columns to float for nice formatting\n",
+    "for key, dtype in df.dtypes.items():\n",
+    "    if is_numeric_dtype(dtype):\n",
+    "        df[key] = df[key].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -118,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last data for germany: 2020-03-25 18:15:35\n"
+      "Last data for germany: 2020-03-26 18:29:29\n"
      ]
     }
    ],
