--- a/01 load.ipynb
+++ b/01 load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert all numeric columns to float for nice formatting\n",
+    "# convert all numeric columns to float for nice formatting\n",
     "for key, dtype in df.dtypes.items():\n",
     "    if is_numeric_dtype(dtype):\n",
     "        df[key] = df[key].astype('float')"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +124,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# order columns\n",
+    "df = df[['date', 'date_string', 'country', 'confirmed', 'active', 'deaths', 'recovered']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last data for germany: 2020-03-26 18:29:29\n"
+      "Last data for germany: 2020-03-28 10:37:41\n"
      ]
     }
    ],
