update and new predict

--- a/00 Old/02 Predict.ipynb
+++ b/00 Old/02 Predict.ipynb
@@ -83,7 +83,7 @@
     "# prepare machine learning magic\n",
     "y = germany.iloc[len_before_start:]['confirmed'].dropna()\n",
     "x = list(range(len(y)))\n",
-    "# machine learning magic\n",
+    "# magic\n",
     "from scipy.optimize import curve_fit\n",
     "def func(x, a, d):\n",
     "    return a**x + d\n",
