--- a/01 load.ipynb
+++ b/01 load.ipynb
@@ -74,16 +74,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Country_Region', 'Confirmed', 'Deaths', 'Recovered', 'Active',\n",
+       "       'Incident_Rate', 'People_Tested', 'People_Hospitalized',\n",
+       "       'Mortality_Rate', 'UID', 'ISO3', 'Province_State', 'FIPS', 'iso3',\n",
+       "       'Report_Date_String', 'date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.columns = ['country', 'confirmed', 'deaths', 'recovered', 'active', 'date']"
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = ['country', 'confirmed', 'deaths', 'recovered', 'active', 'incident_rate', 'tested', 'hospitalized', 'mortaility', 'uid', 'ISO3', 'province', 'fips', 'iso3', 'report_date_string', 'date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last data for germany: 2020-03-28 10:37:41\n"
+      "Last data for germany: 2020-04-13 12:04:25\n"
      ]
     }
    ],
@@ -166,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
